--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
-        android:clickable="true"
+        android:clickable="false"
         android:elevation="10dp"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardElevation="10dp"
